# questdb-connect

./: .dockerignore  .gitignore  CHANGELOG.md  DEVELOPERS.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  release.sh
.github/workflows/: code-quality.yml  danger.yml  docker-tests.yml  python-app.yml
.github/workflows/validate-pr-title/: dangerfile.js  readme.md  validate.js  validate.test.js
examples/: connect.py  hello_world.py  orm.py  simple.py  simple2.py  sql_alchemy.py  trigonometry.py
questdb_connect/: __init__.py  dialect.py  superset.py  superset_engine.py
src/examples/: __init__.py  chat.py  hello_world.py  psycopg2_connect.py  server_utilisation.py  sqlalchemy_orm.py  sqlalchemy_raw.py  trigonometry.py
src/qdb_superset/db_engine_specs/: __init__.py  questdb.py
src/questdb_connect/: __init__.py  common.py  compilers.py  dialect.py  dml.py  function_names.py  identifier_preparer.py  impl.py  inspector.py  keywords_functions.py  superset.py  superset_engine.py  table_engine.py  types.py
src/superset/db_engine_specs/: questdb.py
src/superset_ext/db_engine_specs/: questdb.py
superset_toolkit/: Dockerfile  docker-compose.yml
superset_toolkit/docker/: requirements-local.txt
superset_toolkit/docker/pythonpath_dev/: superset_config.py
tests/: conftest.py  test_dialect.py  test_examples.py  test_function_names.py  test_sql_compiler.py  test_superset.py  test_types.py  test_username.py
