#
#     ___                  _   ____  ____
#    / _ \ _   _  ___  ___| |_|  _ \| __ )
#   | | | | | | |/ _ \/ __| __| | | |  _ \
#   | |_| | |_| |  __/\__ \ |_| |_| | |_) |
#    \__\_\\__,_|\___||___/\__|____/|____/
#
#  Copyright (c) 2014-2019 Appsicle
#  Copyright (c) 2019-2023 QuestDB
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
[project]
name = 'questdb-connect'
#version = '1.0.10' # Standalone production version (with engine)
version = '0.0.100' # testing version
authors = [{ name = 'questdb.io', email = 'miguel@questdb.io' }]
description = "SqlAlchemy library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Database',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = []

[project.urls]
'Homepage' = "https://github.com/questdb/questdb-connect/"
'Bug Tracker' = "https://github.com/questdb/questdb-connect/issues/"
'QuestDB GitHub' = "https://github.com/questdb/questdb/"
'QuestDB Docs' = "https://questdb.io/docs/"

[project.entry-points.'sqlalchemy.dialects']
questdb = 'questdb_connect.dialect:QuestDBDialect'

[project.entry-points.'superset.db_engine_specs']
questdb = 'qdb_superset.db_engine_specs.questdb:QuestDbEngineSpec'

[project.optional-dependencies]
test = [
    'psycopg2-binary~=2.9.6',
    'SQLAlchemy<=1.4.47',
    'apache-superset>=2.1.0',
    'sqlparse==0.4.3',
    'pytest~=7.3.0',
    'pytest_mock~=3.11.1',
    'black~=23.3.0',
    'ruff~=0.0.269',
]

[tool.ruff]
# https://github.com/charliermarsh/ruff#configuration
select = ["PL", "RUF", "TCH", "TID", "PT", "C4", "B", "S", "I"]
line-length = 120
exclude = [
    ".pytest_cache",
    ".questdb_data",
    ".git",
    ".ruff_cache",
    "venv",
    "dist",
    "questdb_connect.egg-info",
]

[tool.ruff.pylint]
max-branches = 20
max-args = 10

[tool.ruff.per-file-ignores]
'tests/test_dialect.py' = ['S101']
'tests/test_types.py' = ['S101']
'tests/test_superset.py' = ['S101']
'tests/conftest.py' = ['S608']
'src/examples/sqlalchemy_raw.py' = ['S608']
'src/examples/server_utilisation.py' = ['S311']
